[package]
name = "mini-os"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9"
volatile = "0.6"
spin = "0.10"
lazy_static = {version = "1.5", features = ["spin_no_std"]}

[[bin]]
name = "mini-os"
test = true
bench = false

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]

test-success-exit-code = 33 